# doc-intelligence-refinery

./: .gitignore  DOMAIN_NOTES.md  README.md  check_db.py  pyproject.toml  requirements.txt  run_refinery.py  streamlit_app.py  test_phase_3.py  test_pipeline.py  test_rag_search.py  validate_mastery.py
logs/: extraction_ledger.csv  extraction_ledger.jsonl
research/: density_check.py  docling_output.md  docling_test.py
rubric/: extraction_rules.yaml
src/agents/: chunker.py  domain_classifier.py  extractor.py  fact_extractor.py  indexer.py  query_agent.py  triage.py  triage_agent.py
src/doc_intelligence_refinery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/engines/: chunking.py  indexer.py  vector_store.py
src/models/: document_schema.py
src/strategies/: base_strategy.py  fast_text_extractor.py  layout_extractor.py  vision_extractor.py
src/utils/: config_loader.py
tests/: test_end_to_end.py  test_triage.py
