[project]
name = "doc-intelligence-refinery"
version = "0.1.0"
description = "A multi-strategy document extraction pipeline with automated triage."
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "pydantic>=2.0.0",
    "pdfplumber>=0.10.0",
    "docling>=1.0.0",
    "rapidocr-onnxruntime>=1.3.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"